# stable-cart

./: .actrc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  sitecustomize.py
.github/workflows/: ci.yml  docs.yml  python-publish.yml
benchmark/: benchmark_less_greedy.py
benchmark_results/: comprehensive_benchmark_report.md  detailed_results.csv  stability_analysis.csv  summary_statistics.csv
docs/: LOCAL_CI.md  api.rst  conf.py  index.rst
docs/_autosummary/: stable_cart.BaseStableTree.rst  stable_cart.BootstrapVariancePenalizedTree.rst  stable_cart.LessGreedyHybridTree.rst  stable_cart.RobustPrefixHonestTree.rst  stable_cart.SplitCandidate.rst  stable_cart.SplitStrategy.rst  stable_cart.StabilityMetrics.rst  stable_cart.create_split_strategy.rst  stable_cart.evaluate_models.rst  stable_cart.prediction_stability.rst
docs/_static/: custom.css
docs/examples/: basic_usage.rst  classification_example.rst  index.rst  regression_example.rst  stability_analysis.rst
docs/notebooks/: basic_usage.ipynb  benchmark_showcase.ipynb  index.rst  stability_showcase.ipynb
scripts/: benchmark_datasets.py  benchmark_evaluation.py  benchmark_less_greedy.py  benchmark_report.py  comprehensive_benchmark.py  run_robust_benchmark.py  unified_stability_benchmark.py  visualize_benchmark_resuts.py
scripts/ci/: README.md  act-utils.sh  ci-local.sh  docs-local.sh  lint-ci.sh  test-matrix.sh
src/: evalutation.py  less_greedy_tree.py
src/stable-cart/: evalutation.py
src/stable_cart/: evaluation.py
stable-cart/: __init__.py  less_greedy_tree.py
stable_cart/: __init__.py  _types.py  base_stable_tree.py  bootstrap_variance_tree.py  evaluation.py  less_greedy_tree.py  robust_prefix.py  split_strategies.py  stability_utils.py  unified_bootstrap_variance_tree.py  unified_less_greedy_tree.py  unified_robust_prefix_tree.py
tests/: test_bootstrap_variance.py  test_evaluation.py  test_less_greedy_tree.py  test_realistic_scenarios.py  test_robust_prefix.py
tests/e2e/: realistic_scenarios.py  test_cli_train_predict.py  test_docker_simulation.py  test_excel_plotting_workflow.py  test_realistic_scenarios.py
tests/unit/: test_bootstrap_variance.py  test_evaluation_errors.py  test_evaluation_metrics.py  test_less_greedy_tree_basic.py  test_less_greedy_tree_edgecases.py  test_stable_cart.py  tests_stable_cart.py
