

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-cart"
version = "0.1.0"
description = "A stable decision tree (CART) implementation."
authors = [
    { name = "Gaurav Sood", email = "-" },
    { name = "Arav Bhosle", email = "aravbhosle@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scikit-learn",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stable_cart*"]