[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-cart"
version = "0.1.0"
description = "A stable decision tree (CART) implementation."
authors = [
    { name = "Gaurav Sood", email = "gaurav@example.com" },
    { name = "Arav Bhosle", email = "aravbhosle@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scikit-learn>=1.5",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["evalutation"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stable_cart*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
filterwarnings = [
    "ignore::UserWarning",
]
markers = [
    "e2e: end-to-end integration tests",
    "slow: slow running tests",
]

[tool.coverage.run]
branch = true
source = ["stable_cart"]

[tool.coverage.report]
show_missing = true
